[project]
name = "document-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
